# dns_checking_tool

./: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.resolver  Makefile  README.md  app.py  cli.py  dns_checker.py  dnssec_analytics.py  dnssec_checks.py  dnssec_models.py  dnssec_plot.py  dnssec_recommendations.py  dnssec_reporting.py  dnssec_runner.py  dnssec_scanner.py  dnssec_tool.py  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  test_dnssec_scanner.py
fly/api/: fly.toml
fly/resolver/: fly.toml
scripts/: deploy-fly.sh
src/caa/: __init__.py  ca_policy.py  ca_resolver.py  caa.py
src/dcv/: __init__.py  models.py  tool.py
src/dns_checking_tool/: __init__.py  app.py  cli.py
src/dns_checking_tool.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/dns_checking_tool/static/: index.html
src/dnshealth/: __init__.py  models.py  tool.py
src/dnssec/: checks.py  models.py  reporting.py  scanner.py  tool.py
src/mpic/: mpic.py
src/reporting/: assembler.py  dnssec_charts.py  recommendations.py  targets.py
static/: index.html
testing/: test_dnssec_scanner.py
unbound/: unbound-resolver.conf  unbound.conf
unbound-data/: root.key
unbound-data/var/: root.key
